--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="br.com.pr.alura.aluraviagens"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="br.com.pr.alura.aluraviagens">
 
     <application
         android:allowBackup="true"
@@ -13,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AluraViagens"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.activity.ResumoPacotesActivity"
+            android:exported="false"/>
         <activity
             android:name=".ui.activity.ListaPacotesActivity"
             android:exported="true">
