--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,17 @@
         android:theme="@style/Theme.AluraViagens"
         tools:targetApi="31">
         <activity
+            android:name=".ui.activity.PagamentoActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.activity.ResumoPacotesActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".ui.activity.ListaPacotesActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
