--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,12 @@
             android:exported="false" />
         <activity
             android:name=".ui.activity.ListaPacotesActivity"
+            android:exported="false"/>
+        <activity
+                android:name=".ui.activity.SplashScreenActivity"
+                android:theme="@style/Theme.AppCompat.NoActionBar"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
